[gd_scene load_steps=10 format=3 uid="uid://x686ebuibkcw"]

[ext_resource type="Texture2D" uid="uid://b4oo61a8wvq8k" path="res://assets/door.jpg" id="1_57hqw"]
[ext_resource type="Script" path="res://scripts/DoorBackground.gd" id="2_slw33"]
[ext_resource type="PackedScene" uid="uid://cfasblbn154pd" path="res://scenes/prisoner_1.tscn" id="3_k2j40"]
[ext_resource type="Script" path="res://scripts/prisoner_1.gd" id="4_dejoi"]

[sub_resource type="Animation" id="Animation_1kp8x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DoorBackground:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.607843)]
}

[sub_resource type="Animation" id="Animation_jtlgc"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DoorBackground:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.611765)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tckle"]
_data = {
"RESET": SubResource("Animation_1kp8x"),
"fade_in": SubResource("Animation_jtlgc")
}

[sub_resource type="GDScript" id="GDScript_1arwa"]
script/source = "extends Area2D

"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rpme5"]
size = Vector2(263.94, 570.586)

[node name="Level_1" type="Node"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 0
offset_left = -16.0
offset_top = 746.0
offset_right = 1952.0
offset_bottom = 1104.0
color = Color(0, 0, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="Control"]
layout_mode = 0
offset_left = 591.0
offset_top = -31.0
offset_right = 1338.0
offset_bottom = 777.0
color = Color(0, 0, 0, 1)

[node name="DoorBackground" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.607843)
position = Vector2(964, 369)
scale = Vector2(0.731228, 0.786911)
texture = ExtResource("1_57hqw")
script = ExtResource("2_slw33")

[node name="AnimationPlayer" type="AnimationPlayer" parent="DoorBackground"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_tckle")
}

[node name="Control" type="Control" parent="DoorBackground"]
layout_mode = 3
anchors_preset = 0
offset_left = -135.0
offset_top = -233.0
offset_right = 144.0
offset_bottom = 353.0
mouse_filter = 1
mouse_default_cursor_shape = 2

[node name="Area2D" type="Area2D" parent="DoorBackground/Control"]
position = Vector2(0, 3.05176e-05)
scale = Vector2(1, 1)
script = SubResource("GDScript_1arwa")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorBackground/Control/Area2D"]
position = Vector2(143.205, 285.102)
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_rpme5")

[node name="Prisoner1" parent="." instance=ExtResource("3_k2j40")]
position = Vector2(888, 366)
script = ExtResource("4_dejoi")

[connection signal="animation_finished" from="DoorBackground/AnimationPlayer" to="DoorBackground" method="_on_animation_player_animation_finished"]
[connection signal="mouse_entered" from="DoorBackground/Control/Area2D" to="DoorBackground" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="DoorBackground/Control/Area2D" to="DoorBackground" method="_on_area_2d_mouse_exited"]
